# kicad-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/kicad_mcp/: connection.py  server.py
src/kicad_mcp/tools/: board.py  info.py
